[gd_scene load_steps=8 format=3 uid="uid://b0q8o2yerelp5"]

[ext_resource type="Script" path="res://ice.gd" id="1_e3qbt"]
[ext_resource type="Texture2D" uid="uid://byjxgycvqo7xw" path="res://sprites/sprite_sheet.png" id="1_ldlhu"]
[ext_resource type="Material" uid="uid://bp8w0dmhq1bui" path="res://ice_material.tres" id="2_uncue"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iow74"]
size = Vector2(32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjkp7"]
atlas = ExtResource("1_ldlhu")
region = Rect2(64, 0, 32, 32)

[sub_resource type="Animation" id="Animation_2vp31"]
resource_name = "break"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:breakage")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gv7b8"]
_data = {
"break": SubResource("Animation_2vp31")
}

[node name="Ice" type="Node2D"]
script = ExtResource("1_e3qbt")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_iow74")

[node name="GFX" type="Sprite2D" parent="."]
material = ExtResource("2_uncue")
texture = SubResource("AtlasTexture_vjkp7")

[node name="AdjacentCast" type="RayCast2D" parent="."]
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="BreakAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gv7b8")
}

[connection signal="animation_finished" from="BreakAnimation" to="." method="_on_break_animation_finished"]
